KERI page added

--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -28,7 +28,9 @@ const {
   {...linkProps}
 >
   <slot />
-  <ArrowRight class:list={['ml-3 inline-block h-7 w-7 md:h-8', arrowClasses]} />
+  <ArrowRight
+    class:list={['ml-3 inline-block h-7 w-7 fill-white md:h-8', arrowClasses]}
+  />
 </a>
 
 <style></style>
