--- a/src/components/ImageCarousel.astro
+++ b/src/components/ImageCarousel.astro
@@ -64,10 +64,10 @@ const { name, screenshotsInfo, links } = Astro.props;
         screenshotsInfo.images.length > 1 && (
           <div class="flex w-full justify-center gap-3 md:w-auto">
             <button class="arrow left flex-center h-14 w-14 rounded-[50%] border border-white/10 bg-white/5 [&>svg]:hover:opacity-80">
-              <ArrowRight class="h-7 w-7 rotate-180" />
+              <ArrowRight class="h-7 w-7 rotate-180 fill-white" />
             </button>
             <button class="arrow right flex-center h-14 w-14 rounded-[50%] border border-white/10 bg-white/5 [&>svg]:hover:opacity-80">
-              <ArrowRight class="h-7 w-7" />
+              <ArrowRight class="h-7 w-7 fill-white" />
             </button>
           </div>
         )
