--- a/src/components/clients/Client.astro
+++ b/src/components/clients/Client.astro
@@ -111,7 +111,7 @@ const mobileImagesConfig = (
     <div class="text-3xl text-white md:text-3xl-desktop">{description}</div>
     <div class="text-xl text-white hover:opacity-80 md:text-xl-desktop">
       {name} case study <ArrowRight
-        class="ml-2.5 inline-block h-5 w-5 md:h-7 md:w-7"
+        class="ml-2.5 inline-block h-5 w-5 fill-white md:h-7 md:w-7"
       />
     </div>
     {
