--- a/src/components/pages-blocks/CasesBlock.astro
+++ b/src/components/pages-blocks/CasesBlock.astro
@@ -125,7 +125,9 @@ import { Image } from 'astro:assets';
       class="cursor-pointer p-3 text-xl text-white hover:opacity-80 md:text-xl-desktop"
       href={NavRoutes.caseStudies.path}
     >
-      View all case studies <ArrowRight class="ml-2.5 inline-block h-5 w-5 md:h-7 md:w-7" /></a
+      View all case studies <ArrowRight
+        class="ml-2.5 inline-block h-5 w-5 fill-white md:h-7 md:w-7"
+      /></a
     >
   </div>
 </div>
