--- a/src/components/pages-blocks/VacanciesBlock.astro
+++ b/src/components/pages-blocks/VacanciesBlock.astro
@@ -43,7 +43,7 @@ const openedVacancies = vacancies.filter((v) => !v.data.disabled);
                 class="font-medium text-white"
               >
                 View job description{' '}
-                <ArrowRight class="ml-2.5 inline-block h-5 w-5" />
+                <ArrowRight class="ml-2.5 inline-block h-5 w-5 fill-white" />
               </a>
             </div>
           </div>
