--- a/src/constants/clientsStack.astro
+++ b/src/constants/clientsStack.astro
@@ -197,14 +197,16 @@ export const ClientsShort: ClientPageProps[] = [
       location: 'Dumfries, VA',
       purpose: 'Privacy management',
     },
-    comments: [{
-      author: {
-        avatar: DenisePhotoImage,
-        name: 'Denise Taylor',
-        position: 'CEO at PRIVO',
+    comments: [
+      {
+        author: {
+          avatar: DenisePhotoImage,
+          name: 'Denise Taylor',
+          position: 'CEO at PRIVO',
+        },
+        text: 'PRIVO relies on Swift’s engineering expertise and identity management experts to develop and operate our world-class privacy services for dozens of major corporations',
       },
-      text: 'PRIVO relies on Swift’s engineering expertise and identity management experts to develop and operate our world-class privacy services for dozens of major corporations',
-    }],
+    ],
     providedServices: [
       { id: 'file', title: 'Consent Management Service' },
       { id: 'guard', title: 'Customizable Authorization Service' },
@@ -243,15 +245,18 @@ export const ClientsShort: ClientPageProps[] = [
     description: 'AI tool to predict virality and maximize marketing ROI',
     name: 'VieRally',
     pageTopImg: { default: vierallyPageImage, x2: vierallyPagex2Image },
-    subtitle: 'VieRally is the cutting edge platform for Predictive Viral Marketing.',
-    comments: [{
-      author: {
-        avatar: adamPhotoImage,
-        name: 'Adam Almozlino',
-        position: 'CEO at VieRally',
+    subtitle:
+      'VieRally is the cutting edge platform for Predictive Viral Marketing.',
+    comments: [
+      {
+        author: {
+          avatar: adamPhotoImage,
+          name: 'Adam Almozlino',
+          position: 'CEO at VieRally',
+        },
+        text: 'Swift Invention has been my go-to partner for all software engineering needs. For over a decade, they’ve proven to be reliable, high quality, and reasonably priced compared to alternatives. They’re collaborative and deliver what they say when they say they will. I cannot recommend Swift enough for any software development needs.',
       },
-      text: 'Swift Invention has been my go-to partner for all software engineering needs. For over a decade, they’ve proven to be reliable, high quality, and reasonably priced compared to alternatives. They’re collaborative and deliver what they say when they say they will. I cannot recommend Swift enough for any software development needs.',
-    }],
+    ],
     screenshotsInfo: {
       subtitle: 'Swift is the leading developer of the VieRally solution.',
       images: [
@@ -298,16 +303,19 @@ export const ClientsShort: ClientPageProps[] = [
     desktopImg: { default: plumcheckLaptopImage, x2: plumcheckLaptop2xImage },
     logoImg: plumcheckLogoImage,
     mobileImg: { default: plumcheckMobileImage, x2: plumcheckMobile2xImage },
-    description: 'Allow dating and social media app users to share verified ID and health information',
+    description:
+      'Allow dating and social media app users to share verified ID and health information',
     subtitle: 'PlumCheck empowers people to safely share personal information.',
-    comments: [{
-      author: {
-        avatar: joshPhotoImage,
-        name: 'Josh Karetny',
-        position: 'PlumCheck CEO',
+    comments: [
+      {
+        author: {
+          avatar: joshPhotoImage,
+          name: 'Josh Karetny',
+          position: 'PlumCheck CEO',
+        },
+        text: "From design and UX/UI to engineering and integrations, Swift Invention is a full service development shop that provides top notch work. As first-time founders, we've appreciated their guidance, creativity, and experience at building and evolving startups",
       },
-      text: "From design and UX/UI to engineering and integrations, Swift Invention is a full service development shop that provides top notch work. As first-time founders, we've appreciated their guidance, creativity, and experience at building and evolving startups",
-    }],
+    ],
     screenshotsInfo: {
       subtitle:
         'We developed a web application that allows users to verify their identity, and connect their healthcare provider accounts to share verified health information. We continue to maintain and enhance the solution.',
@@ -400,8 +408,10 @@ export const ClientsAll: ClientPageProps[] = [
     description: 'A human-centered approach to personal data',
     name: 'Mee',
     pageTopImg: { default: meePageImage, x2: meePage2xImage },
-    title: 'We build solutions that put you at the center of personal data flows.',
-    subtitle: 'Giving individuals more control. More privacy. More convenience.',
+    title:
+      'We build solutions that put you at the center of personal data flows.',
+    subtitle:
+      'Giving individuals more control. More privacy. More convenience.',
     screenshotsInfo: {
       subtitle:
         'Swift is a supporter of the Mee Foundation. We contribute to the Foundation’s open source projects on Github.',
@@ -441,14 +451,16 @@ export const ClientsAll: ClientPageProps[] = [
     pageTopImg: { default: mbsPageImage, x2: mbsPage2xImage },
     subtitle:
       'Experience studio-quality sound, exceptional video performance, and real-time collaboration. Master, teach, and create music anytime, anywhere. Join a secure, global community of musicians.',
-    comments: [{
-      author: {
-        avatar: katePhotoImage,
-        name: 'Kate Dillingham',
-        position: 'CEO at MyBlueSkiesMusic',
+    comments: [
+      {
+        author: {
+          avatar: katePhotoImage,
+          name: 'Kate Dillingham',
+          position: 'CEO at MyBlueSkiesMusic',
+        },
+        text: 'Collaborating with Swift Invention, Inc on myblueskiesmusic.com is an exceptional experience. Their technical expertise, creativity, and commitment to excellence brought my vision to life, delivering a beautifully crafted platform that exceeded my expectations. I truly enjoy working with this talented team!',
       },
-      text: 'Collaborating with Swift Invention, Inc on myblueskiesmusic.com is an exceptional experience. Their technical expertise, creativity, and commitment to excellence brought my vision to life, delivering a beautifully crafted platform that exceeded my expectations. I truly enjoy working with this talented team!',
-    }],
+    ],
     screenshotsInfo: {
       subtitle:
         'We developed the entire solution from concept to production-ready web application, and continue to maintain and enhance it.',
@@ -477,10 +489,12 @@ export const ClientsAll: ClientPageProps[] = [
   {
     desktopImg: { default: blankSlateLaptopImage, x2: blankSlateLaptop2xImage },
     logoImg: blankSlateLogoImage,
-    description: 'Enterprise Microlearning App. Pushing the limits of the human brain',
+    description:
+      'Enterprise Microlearning App. Pushing the limits of the human brain',
     name: 'Blank Slate',
     pageTopImg: { default: blankslatePageImage, x2: blankslatePage2xImage },
-    subtitle: 'BlankSlate is a deeptech cognitive science firm dedicated to pushing the limits of the human brain.',
+    subtitle:
+      'BlankSlate is a deeptech cognitive science firm dedicated to pushing the limits of the human brain.',
     links: ['blankslatetech.co'],
     id: 'blankslate',
     about: {
@@ -522,29 +536,32 @@ export const ClientsAll: ClientPageProps[] = [
     pageTopImg: { default: quanthealthPageImage },
     subtitle:
       'QuantHealth is an AI company conducting patient-centric drug simulations to accelerate and de-risk drug development.',
-    comments: [{
-      author: {
-        avatar: OrrPhotoImage,
-        name: 'Orr Inbar',
-        position: 'Co-founder & CEO at QuantHealth',
+    comments: [
+      {
+        author: {
+          avatar: OrrPhotoImage,
+          name: 'Orr Inbar',
+          position: 'Co-founder & CEO at QuantHealth',
+        },
+        text: "Swift's software engineering teams provide an important extension of our core engineering team, providing complementary skill sets, redundancies in critical areas, and accelerated development on strategic projects. Given the mission critical work that QuantHealth does in clinical trial research, Swift's support has been invaluable",
       },
-      text: "Swift's software engineering teams provide an important extension of our core engineering team, providing complementary skill sets, redundancies in critical areas, and accelerated development on strategic projects. Given the mission critical work that QuantHealth does in clinical trial research, Swift's support has been invaluable",
-    }, 
-    {
-      author: {
-        avatar: JulienPhotoImage,
-        name: 'Julien Benchetrit',
-        position: 'VP Engineering at QuantHealth',
+      {
+        author: {
+          avatar: JulienPhotoImage,
+          name: 'Julien Benchetrit',
+          position: 'VP Engineering at QuantHealth',
+        },
+        text: 'Working with the Swift engineers has been a fantastic experience. They’ve been embedded with us for over a year now, consistently delivering high-quality work and handling some of our most strategic, complex features with remarkable reliability and ownership. We trust them fully and consider them an integral part of our team.',
       },
-      text: "Working with the Swift engineers has been a fantastic experience. They’ve been embedded with us for over a year now, consistently delivering high-quality work and handling some of our most strategic, complex features with remarkable reliability and ownership. We trust them fully and consider them an integral part of our team.",
-    }],
+    ],
     links: ['quanthealth.ai'],
     id: 'quantHealth',
     about: {
       founded: '2020',
       employees: '10+',
       location: 'Tel Aviv, Israel',
-      purpose: 'Drug Simulation, Bioinformatics, Computational Biology, Trial Simulation',
+      purpose:
+        'Drug Simulation, Bioinformatics, Computational Biology, Trial Simulation',
     },
     providedServices: [
       { id: 'devops', title: 'DevOps' },
@@ -570,7 +587,8 @@ export const ClientsAll: ClientPageProps[] = [
       x2: beghouLaptop2xImage,
     },
     logoImg: beghouLogoImage,
-    description: 'Direct life sciences companies toward more efficient and higher-performing commercial operations. ',
+    description:
+      'Direct life sciences companies toward more efficient and higher-performing commercial operations. ',
     name: 'Beghou',
     pageTopImg: { default: beghouPageImage, x2: beghouPage2xImage },
     subtitle:
@@ -581,7 +599,8 @@ export const ClientsAll: ClientPageProps[] = [
       founded: '1993',
       employees: '400+',
       location: 'Evanston, IL',
-      purpose: 'Consulting Services, Advanced Analytics, Technology Services, Pharmaceutical and Healthcare',
+      purpose:
+        'Consulting Services, Advanced Analytics, Technology Services, Pharmaceutical and Healthcare',
     },
     providedServices: [
       { id: 'devops', title: 'DevOps' },
@@ -596,7 +615,8 @@ export const ClientsAll: ClientPageProps[] = [
       'Integrated commercial services platform to solve any drug pricing, reimbursement, or product delivery challenge',
     name: 'Eversana',
     pageTopImg: { default: eversanaPageImage },
-    subtitle: 'Leading independent provider of global services to the life sciences industry.',
+    subtitle:
+      'Leading independent provider of global services to the life sciences industry.',
     links: ['eversana.com'],
     id: 'eversana',
     about: {
