--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '~/layouts/Layout.astro';
 import PageHead from '~/components/PageHead.astro';
 import SecondBlock from '~/components/pages-blocks/SecondBlock.astro';
 import servicesBlockImage from '~/assets/images/services-block.png';
